crates/clan/clan-core/tests/snapshots/clan_golden__cooccur_eng@clan.snap
---
source: tests/clan_golden.rs
expression: clan_output
---
  1  angle kept
  2  got to
  2  he got
  1  he twirled
  1  hill until
  2  kept going
  2  the hill
  1  the to
  1  the top
  2  to the
  1  triangle kept
  2  twirled up
  2  until he
  2  up the
