crates/clan/clan-core/tests/snapshots/clan_golden__cooccur_eng@rust.snap
---
source: tests/clan_golden.rs
expression: rust_output
---
Co-occurrences
  Unique pairs: 15
  Total pair instances: 23
  Total utterances: 5
  Word 1    Word 2   Count
  --------  -------  -----
  got       to       2    
  he        got      2    
  kept      going    2    
  the       hill     2    
  to        the      2    
  twirled   up       2    
  until     he       2    
  up        the      2    
  and       he       1    
  angle     kept     1    
  he        twirled  1    
  hill      until    1    
  the       to       1    
  the       top      1    
  triangle  kept     1
