crates/clan/clan-core/tests/snapshots/clan_golden__cooccur_mor_gra@clan.snap
---
source: tests/clan_golden.rs
expression: clan_output
---
  1  i want
  1  it's i
  1  mommy will
  1  want cookies
  1  will get
