crates/clan/clan-core/tests/snapshots/clan_golden__cooccur_mor_gra@rust.snap
---
source: tests/clan_golden.rs
expression: rust_output
---
Co-occurrences
  Unique pairs: 6
  Total pair instances: 6
  Total utterances: 2
  Word 1  Word 2   Count
  ------  -------  -----
  get     them     1    
  i       want     1    
  it's    i        1    
  mommy   will     1    
  want    cookies  1    
  will    get      1
