crates/clan/clan-core/tests/snapshots/clan_golden__corelex_mor_gra@rust.snap
---
source: crates/talkbank-clan/tests/clan_golden.rs
expression: rust_output
---
Core Vocabulary (frequency >= 2):
  0 core / 8 total = 0.0%

Core words:

Non-core words:
     1  cookies
     1  get
     1  i
     1  it's
     1  mommy
     1  them
     1  want
     1  will
