crates/clan/clan-core/tests/snapshots/clan_golden__dist_eng@clan.snap
---
source: tests/clan_golden.rs
expression: clan_output
---
There were 5 turns.


                 Occurrence   First    Last        Average 
Word                  Count   Occurs   Occurs      Distance
-----------------------------------------------------------
and                      1        3
angle                    1        2
going                    2        1        2         0.5000
got                      2        3        5         1.0000
he                       3        3        5         0.6667
hill                     2        3        4         0.5000
kept                     2        1        2         0.5000
the                      4        3        5         0.5000
to                       3        3        5         0.6667
top                      1        3
triangle                 1        1
twirled                  2        3        4         0.5000
until                    2        3        5         1.0000
up                       2        3        4         0.5000
