crates/clan/clan-core/tests/snapshots/clan_golden__dist_mor_gra@rust.snap
---
source: tests/clan_golden.rs
expression: rust_output
---
There were 2 turns.


                 Occurrence   First    Last        Average 
Word                  Count   Occurs   Occurs      Distance
-----------------------------------------------------------
cookies                  1        1
get                      1        2
i                        1        1
it's                     1        1
mommy                    1        2
them                     1        2
want                     1        1
will                     1        2
