crates/clan/clan-core/tests/snapshots/clan_golden__dss_eng@rust.snap
---
source: tests/clan_golden.rs
expression: rust_output
---
Speaker: GES
  Utterances scored: 3
  Grand total: 12
  DSS score: 4.00

Speaker: SPE
  Utterances scored: 2
  Grand total: 8
  DSS score: 4.00
